# Cryptography_Project

./: CMakeLists.txt  main_new.cpp
aes_project/: CMakeLists.txt
aes_project/include/: aes_project.h  decryption.h  encryption.h  structures.h
aes_project/src/: decryption.cpp  encryption.cpp  main.cpp  message.aes  structures.cpp
rsa_project/include/: primes.h  rsa.h  rsa_project.h
rsa_project/src/: primes.cpp  rsa.cpp
sha512_project/: CMakeLists.txt
sha512_project/includes/: sha512.h
sha512_project/src/: main.cpp  sha512.cpp
